--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,6 @@ dependencies = [
 
 [tool.uv]
 extra-index-url = ["https://download.pytorch.org/whl/cu117"]
+dev-dependencies = [
+    "ipykernel>=6.29.5",
+]
