--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,6 +4,7 @@ FROM nvidia/cuda:${VARIANT}
 
 RUN apt-get update && apt-get install -y \
     curl \
+    git \
     && apt-get upgrade -y \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
