update: enhance devcontainer configuration and add README

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,27 +1,28 @@
 {
-    "name": "CUDA 11.7.1",
-    "build": {
-      "dockerfile": "Dockerfile",
-      "context": "..",
-      "args": {
-        "VARIANT": "11.7.1-cudnn8-runtime-ubuntu20.04"
-      }
-    },
-    "workspaceFolder": "/workspace",
-    "runArgs": [
-      "--gpus=all"
-    ],
-    "customizations": {
-      "vscode": {
-        "settings": {
-          "terminal.integrated.shell.linux": "/bin/bash"
-        },
-        "extensions": [
-            "ms-python.python",
-            "ms-azuretools.vscode-docker",
-            "charliermarsh.ruff"
-        ]
-      }
+  "name": "CUDA 11.7.1",
+  "build": {
+    "dockerfile": "Dockerfile",
+    "context": "..",
+    "args": {
+      "VARIANT": "11.7.1-cudnn8-runtime-ubuntu20.04"
     }
-  }
-  
+  },
+  "workspaceFolder": "/workspace",
+  "runArgs": [
+    "--gpus=all"
+  ],
+  "customizations": {
+    "vscode": {
+      "settings": {
+        "terminal.integrated.shell.linux": "/bin/bash"
+      },
+      "extensions": [
+          "ms-python.python",
+          "ms-azuretools.vscode-docker",
+          "ms-toolsai.jupyter",
+          "charliermarsh.ruff"
+      ]
+    }
+  },
+  "remoteUser": "vscode"
+}
