--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,6 +7,7 @@
       "VARIANT": "11.7.1-cudnn8-runtime-ubuntu20.04"
     }
   },
+  "workspaceMount": "source=${localWorkspaceFolder},target=/workspace,type=bind",
   "workspaceFolder": "/workspace",
   "runArgs": [
     "--gpus=all"
@@ -17,12 +18,11 @@
         "terminal.integrated.shell.linux": "/bin/bash"
       },
       "extensions": [
-          "ms-python.python",
-          "ms-azuretools.vscode-docker",
-          "ms-toolsai.jupyter",
-          "charliermarsh.ruff"
+        "ms-python.python",
+        "ms-azuretools.vscode-docker",
+        "ms-toolsai.jupyter",
+        "charliermarsh.ruff"
       ]
     }
-  },
-  "remoteUser": "vscode"
+  }
 }
